# clibench

./: CMakeLists.txt  README.md  results.json
cmake/: CompileShaders.cmake  EmbedShader.cmake
shaders/: compute.comp  texture_fill.frag
src/: benchmark_base.h  benchmark_config.h  compute_benchmark.cpp  compute_benchmark.h  cpu_benchmark.cpp  cpu_benchmark.h  gpu_info.h  graphics_benchmark.cpp  graphics_benchmark.h  logger.h  main.cpp  memory_benchmark.cpp  memory_benchmark.h  metal_compute_benchmark.h  metal_compute_benchmark.mm  metal_context.h  metal_context.mm  metal_graphics_benchmark.h  metal_graphics_benchmark.mm  metal_memory_benchmark.h  metal_memory_benchmark.mm  progress.h  result_reporter.cpp  result_reporter.h  score_calculator.h  stress_benchmark.cpp  stress_benchmark.h  vulkan_context.cpp  vulkan_context.h
